--- a/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
+++ b/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
@@ -861,14 +861,14 @@
         else {
             $('#PONo_Error').hide();
         }
-        if (VContactPerson.trim().length > 100) {
+        if (VendorAttention.trim().length > 100) {
             isValid = false;
             $('#VContactPerson_Error').text("Attention cannot be greater than 100 characters!").show();
         }
         else {
             $('#VContactPerson_Error').hide();
         }
-        if (ProjectManager.trim().length > 100) {
+        if (AttnManager.trim().length > 100) {
             isValid = false;
             $('#ProjectManager_Error').text("Order To cannot be greater than 100 characters!").show();
         }
@@ -910,14 +910,14 @@
         else {
             $('#Content_Error').hide();
         }
-        if (RcvConcenPerson.trim().length > 100) {
+        if (RcvConcernPerson.trim().length > 100) {
             isValid = false;
             $('#RcvConcenPerson_Error').text("Receive concern person cannot be greater than 100 characters!").show();
         }
         else {
             $('#RcvConcenPerson_Error').hide();
         }
-        if (RcvPersonCell.trim().length > 100) {
+        if (RcvConcernPersonCell.trim().length > 100) {
             isValid = false;
             $('#RcvPersonCell_Error').text("Cell cannot be greater than 100 characters!").show();
         }
