--- a/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
+++ b/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
@@ -557,8 +557,17 @@
             console.log('UnitPrice: ' + cost);
             var result = parseFloat(quantity) * parseFloat(cost);
             ItemTotalCost = parseFloat(ItemTotalCost + result);
+
         }
-        $('#totalCost').val(ItemTotalCost);
+
+        if (isNaN(result)) {
+            $('#totalCost').val("");
+        }
+        else {
+            ItemTotalCost = parseFloat(ItemTotalCost + result);
+            $('#totalCost').val(ItemTotalCost);
+        }
+        //$('#totalCost').val(ItemTotalCost);
     }
 
     $(document).ready(function () {
